Add ValidateRequestId middleware swagger description
